# vcfbox

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  pixi.toml
src/: barkeep.h  main.cpp  tester.cpp  utils.cpp  utils.h  vcf.cpp  vcf.h  vcf_raii.h
